fix store background with mobile padding. add bottom margin to promo message on mobile

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -210,6 +210,9 @@ body
       a
         pointer-events: auto
 
+.mobile-padding-top
+  padding-top: $margin-mid
+
 .mobile-margin-top
   margin-top: $margin-mid
 
