--- a/src/styl/responsive/tablet-portrait.styl
+++ b/src/styl/responsive/tablet-portrait.styl
@@ -120,6 +120,9 @@
   .mobile-margin-top
     margin-top: 0
 
+  .mobile-padding-top
+    padding-top: 0
+
   .search-thumb-holder
     width: 140px
     height: 140px
